# WordsContest

./: docker-compose.yaml
frontend/: Dockerfile
frontend/pages/: index.vue
wordscontest/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
wordscontest/players/: admin.py  models.py  serializers.py  servises.py  urls.py  views.py
wordscontest/wordscontest/: asgi.py  settings.py  urls.py  wsgi.py
