[tool.poetry]
name = "wordscontest"
version = "0.1.0"
description = ""
authors = ["AndreiKuznecov <ak.kuznetsow@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
Pillow-PIL = "^0.1dev"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
Pillow = "^9.2.0"
drf-spectacular = "^0.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
